fixing layout breaking issue by removing col

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,6 @@
 
 .slideinner{
+	scroll-behavior: smooth;
 	margin-bottom: 10px;
 	overflow-x: auto;
 	 scrollbar-width: none;
